Update color picker prompt text in index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div id="colorPicker" class="hidden">
-            <p>SCEGLI COLORE</p>
+            <p>SCEGLI UN COLORE</p>
             <div class="pick-grid">
                 <div class="pick red" onclick="setWildColor('red')"></div>
                 <div class="pick blue" onclick="setWildColor('blue')"></div>
