--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="input-section">
                 <button id="playBotBtn" class="btn-primary">GIOCA CONTRO COMPUTER</button>
                 <div class="or-divider">OPPURE SFIDA UN AMICO</div>
-                <input type="text" id="friendIdInput" placeholder="Inserisci codice amico">
+                <input type="text" id="friendIdInput" placeholder="Codice amico">
                 <button id="connectBtn" class="btn-secondary">CONNETTI E GIOCA</button>
             </div>
         </div>
