--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="input-section">
                 <button id="playBotBtn" class="btn-primary">GIOCA CONTRO COMPUTER</button>
                 <div class="or-divider">OPPURE SFIDA UN AMICO</div>
-                <input type="text" id="friendIdInput" placeholder="Codice amico">
-                <button id="connectBtn" class="btn-secondary">CONNETTI E GIOCA</button>
+                <input type="text" id="friendIdInput" placeholder="Inserisci codice amico">
+                <button id="connectBtn" class="btn-secondary-pro">CONNETTI E GIOCA</button>
             </div>
         </div>
     </div>
@@ -30,24 +30,34 @@
     <div id="gameArea" class="hidden">
         <div id="toastNotification" class="hidden"></div>
         <div id="turnIndicator">CARICAMENTO...</div>
+        
         <div id="opponentArea" class="hand-container">
+            <div id="opponentBadge" class="badge">AVV: 0</div>
             <div id="opponentHand" class="hand"></div>
         </div>
+
         <div id="centerArea">
-            <div id="deck" class="card-slot clickable"><div class="card-back">MASTER<br>UNO</div></div>
+            <div id="deck" class="card-slot clickable">
+                <div class="card-back-simple">UNO</div>
+            </div>
             <div id="discardPile" class="card-slot"></div>
         </div>
+
         <div id="playerArea" class="hand-container">
+            <div id="playerBadge" class="badge">TU: 0</div>
             <div id="playerHand" class="hand"></div>
             <button id="masterUnoBtn" class="hidden">MASTERUNO!</button>
         </div>
+
         <div id="colorPicker" class="hidden">
-            <h3>SCEGLI UN COLORE</h3>
-            <div class="pick-grid">
-                <div class="pick red" onclick="setWildColor('red')"></div>
-                <div class="pick blue" onclick="setWildColor('blue')"></div>
-                <div class="pick green" onclick="setWildColor('green')"></div>
-                <div class="pick yellow" onclick="setWildColor('yellow')"></div>
+            <div class="picker-content">
+                <h3>SCEGLI UN COLORE</h3>
+                <div class="pick-grid">
+                    <div class="pick red" onclick="setWildColor('red')"></div>
+                    <div class="pick blue" onclick="setWildColor('blue')"></div>
+                    <div class="pick green" onclick="setWildColor('green')"></div>
+                    <div class="pick yellow" onclick="setWildColor('yellow')"></div>
+                </div>
             </div>
         </div>
     </div>
