--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <div id="myPeerId">----</div>
                 <button id="copyBtn">COPIA CODICE</button>
             </div>
-            <hr class="spacer">
+            
             <div class="input-section">
-                <button id="playBotBtn" class="btn-primary-alt">GIOCA CONTRO COMPUTER</button>
-                <div class="or-divider">OPPURE SFIDA UN AMICO</div>
+                <button id="playBotBtn" class="btn-yellow">GIOCA CONTRO COMPUTER</button>
+                <div class="or-divider">SFIDA UN AMICO</div>
                 <input type="text" id="friendIdInput" placeholder="Inserisci codice amico">
-                <button id="connectBtn" class="btn-secondary-pro">CONNETTI E GIOCA</button>
+                <button id="connectBtn" class="btn-white">CONNETTI E GIOCA</button>
             </div>
         </div>
     </div>
@@ -65,7 +65,7 @@
     <div id="endScreen" class="hidden">
         <div class="main-box">
             <h1 id="endMessage"></h1>
-            <button class="btn-primary-alt" onclick="location.reload()">NUOVA PARTITA</button>
+            <button class="btn-yellow" onclick="location.reload()">NUOVA PARTITA</button>
         </div>
     </div>
     <script src="script.js"></script>
