--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
             <h1>MasterUno 🃏</h1>
             <div class="id-section">
                 <p>IL TUO CODICE INVITO</p>
-                <div id="myPeerId">CARICAMENTO...</div>
+                <div id="myPeerId">GENERAZIONE...</div>
                 <button id="copyBtn">COPIA CODICE</button>
             </div>
-            
             <div class="input-section">
                 <button id="playBotBtn" class="btn-yellow">GIOCA CONTRO COMPUTER</button>
-                <div class="or-divider">SFIDA UN AMICO</div>
+                <div class="or-divider">OPPURE SFIDA UN AMICO</div>
                 <input type="text" id="friendIdInput" placeholder="Inserisci codice amico">
                 <button id="connectBtn" class="btn-white">CONNETTI E GIOCA</button>
             </div>
@@ -28,23 +27,35 @@
     </div>
 
     <div id="gameArea" class="hidden">
-        <div id="turnIndicator">TURNO...</div>
+        <div id="turnIndicator">CARICAMENTO...</div>
+        
+        <div class="badge-row">
+            <div id="opponentBadge" class="gold-badge">AVVERSARIO: 7 CARTE</div>
+        </div>
+
         <div id="opponentArea" class="hand-container">
-            <div id="opponentBadge" class="badge">AVV: 0</div>
             <div id="opponentHand" class="hand"></div>
         </div>
+
         <div id="centerArea">
-            <div id="deck" class="card-slot clickable"><div class="card-back-master">MASTER<br>UNO</div></div>
+            <div id="deck" class="card-slot clickable">
+                <div class="card-back-classic">MASTER<br>UNO</div>
+            </div>
             <div id="discardPile" class="card-slot"></div>
         </div>
+
         <div id="playerArea" class="hand-container">
-            <div id="playerBadge" class="badge">TU: 0</div>
             <div id="playerHand" class="hand"></div>
+        </div>
+
+        <div class="badge-row">
+            <div id="playerBadge" class="gold-badge">LE TUE CARTE: 7</div>
             <button id="masterUnoBtn" class="hidden">MASTERUNO!</button>
         </div>
+
         <div id="colorPicker" class="hidden">
-            <div class="picker-content">
-                <h3>SCEGLI UN COLORE</h3>
+            <div class="picker-box">
+                <h3>SCEGLI IL COLORE</h3>
                 <div class="pick-grid">
                     <div class="pick red" onclick="setWildColor('red')"></div>
                     <div class="pick blue" onclick="setWildColor('blue')"></div>
