--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
                 <div id="myPeerId">GENERAZIONE...</div>
                 <button id="copyBtn" class="btn-yellow">COPIA CODICE</button>
             </div>
+            
             <div class="input-section">
                 <button id="playBotBtn" class="btn-yellow">GIOCA CONTRO COMPUTER</button>
-                <div class="or-divider">OPPURE SFIDA UN AMICO</div>
+                <div class="or-divider">SFIDA UN AMICO</div>
                 <input type="text" id="friendIdInput" placeholder="Inserisci codice amico">
                 <button id="connectBtn" class="btn-white">CONNETTI E GIOCA</button>
             </div>
@@ -27,7 +28,9 @@
     </div>
 
     <div id="gameArea" class="hidden">
-        <div class="game-row">
+        <div id="turnIndicator">TURNO...</div>
+        
+        <div id="opponentArea">
             <div id="opponentBadge" class="gold-badge">AVVERSARIO: 7</div>
             <div id="opponentHand" class="hand"></div>
         </div>
@@ -39,10 +42,9 @@
             <div id="discardPile" class="card-slot"></div>
         </div>
 
-        <div class="game-row">
+        <div id="playerArea">
             <div id="playerHand" class="hand"></div>
             <div id="playerBadge" class="gold-badge">LE TUE CARTE: 7</div>
-            <button id="masterUnoBtn" class="hidden">MASTERUNO!</button>
         </div>
 
         <div id="colorPicker" class="hidden">
