--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </div>
 
     <div id="gameArea" class="hidden">
-        <div id="turnIndicator">TURNO...</div>
+        <div id="turnIndicator">CARICAMENTO...</div>
         
-        <div id="opponentArea">
+        <div id="opponentArea" class="game-row">
             <div id="opponentBadge" class="gold-badge">AVVERSARIO: 7</div>
             <div id="opponentHand" class="hand"></div>
         </div>
@@ -42,7 +42,7 @@
             <div id="discardPile" class="card-slot"></div>
         </div>
 
-        <div id="playerArea">
+        <div id="playerArea" class="game-row">
             <div id="playerHand" class="hand"></div>
             <div id="playerBadge" class="gold-badge">LE TUE CARTE: 7</div>
         </div>
