--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <div id="myPeerId">GENERAZIONE...</div>
                 <button id="copyBtn" class="btn-yellow">COPIA CODICE</button>
             </div>
-            
             <div class="input-section">
                 <button id="playBotBtn" class="btn-yellow">GIOCA CONTRO COMPUTER</button>
                 <div class="or-divider">SFIDA UN AMICO</div>
@@ -36,15 +35,14 @@
         </div>
 
         <div id="centerArea">
-            <div id="deck" class="card-slot clickable">
-                <div class="card-back-classic">MASTER<br>UNO</div>
-            </div>
+            <div id="deck" class="card-slot clickable"><div class="card-back-classic">MASTER<br>UNO</div></div>
             <div id="discardPile" class="card-slot"></div>
         </div>
 
         <div id="playerArea" class="game-row">
             <div id="playerHand" class="hand"></div>
             <div id="playerBadge" class="gold-badge">LE TUE CARTE: 7</div>
+            <button id="masterUnoBtn" class="hidden">MASTERUNO!</button>
         </div>
 
         <div id="colorPicker" class="hidden">
