--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MasterUno Pro - Tipo 01</title>
+    <title>MasterUno Pro</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -25,26 +25,20 @@
             </div>
         </div>
     </div>
-
     <div id="gameArea" class="hidden">
         <div id="turnIndicator">CARICAMENTO...</div>
-        
         <div id="opponentArea" class="game-row">
             <div id="opponentBadge" class="gold-badge">AVVERSARIO: 7</div>
             <div id="opponentHand" class="hand"></div>
         </div>
-
         <div id="centerArea">
             <div id="deck" class="card-slot clickable"><div class="card-back-classic">MASTER<br>UNO</div></div>
             <div id="discardPile" class="card-slot"></div>
         </div>
-
         <div id="playerArea" class="game-row">
             <div id="playerHand" class="hand"></div>
             <div id="playerBadge" class="gold-badge">LE TUE CARTE: 7</div>
-            <button id="masterUnoBtn" class="hidden">MASTERUNO!</button>
         </div>
-
         <div id="colorPicker" class="hidden">
             <div class="picker-box">
                 <h3>SCEGLI IL COLORE</h3>
