--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div id="playerArea" class="game-row">
             <div id="playerHand" class="hand"></div>
             <div id="playerBadge" class="gold-badge">LE TUE CARTE: 7</div>
+            <button id="masterUnoBtn" class="hidden">MASTERUNO!</button>
         </div>
         <div id="colorPicker" class="hidden">
             <div class="picker-box">
